Fixat swagger docs
