# backend/docs/swagger.json
@@ -35,6 +35,10 @@
                                 "$ref": "#/definitions/main.ContestantDTO"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     }
                 }
             },
@@ -67,6 +71,14 @@
                         "schema": {
                             "$ref": "#/definitions/main.QueueItemDTO"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
                     }
                 }
             }
@@ -131,6 +143,14 @@
                                 "$ref": "#/definitions/main.LeaderboardEntryDTO"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
                     }
                 }
             }
@@ -162,6 +182,10 @@
                         "schema": {
                             "$ref": "#/definitions/main.QueueItemDTO"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
                     }
                 }
             }
@@ -242,6 +266,10 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
                     },
                     "500": {
                         "description": "Internal Server Error",
